--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10324,7 +10324,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] dpongimo [[Dreamy Dungeon]]" modified="20210316035938130" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]]" modified="20210316035955712" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10454,12 +10454,12 @@ Error message and password prompt
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div color="#400080" created="20210314002255824" modified="20210314012607330" name="" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
+<div color="#400080" created="20210314002255824" creator="dpongimo" modified="20210316040006425" modifier="dpongimo" name="" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
 <pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
 
 It's currently in the early design phase with a focus on creating full game design document and compelling game loop before starting development. 
 
-[[Dreamy Dungeon/Overview]]</pre>
+[[Overview]]</pre>
 </div>
 <div created="20210314013842829" creator="dpongimo" modified="20210314014555344" modifier="dpongimo" title="dungeons" type="text/vnd.tiddlywiki">
 <pre>Dungeons are sprawling complexes created by humans in service of [[gods]] to be plundered by [[adventurers]]. Adventurers are attracted by dungeons for fame and fortune and are willing to endure incredible hardships to retrieve the loot deep within dungeons. Dungeons typically contain traps and monsters which adventurers defeat to gain experience.
