--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -145,6 +145,10 @@ Error message and password prompt
 
 <li>$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/superscript</li>
 
+<li>$:/config/Navigation/UpdateAddressBar</li>
+
+<li>$:/config/Navigation/UpdateHistory</li>
+
 <li>$:/config/NewJournal/Title</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
@@ -202,6 +206,8 @@ Error message and password prompt
 <li>$:/SiteTitle</li>
 
 <li>$:/state/edit/references--247287909</li>
+
+<li>$:/state/editpreviewtype</li>
 
 <li>$:/state/image-picker/system--30539526</li>
 
@@ -261,6 +267,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
 <li>$:/themes/tiddlywiki/vanilla/options/stickytitles</li>
 
 <li>$:/view</li>
@@ -270,6 +278,8 @@ Error message and password prompt
 <li>Dreamy Dungeon</li>
 
 <li>dungeons</li>
+
+<li>Inspiration</li>
 
 <li>miia-web</li>
 
@@ -298,6 +308,12 @@ Error message and password prompt
 </div>
 <div created="20210314002016218" modified="20210314002016218" title="$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/superscript">
 <pre>hide</pre>
+</div>
+<div created="20210316040047582" creator="dpongimo" modified="20210316040047582" modifier="dpongimo" title="$:/config/Navigation/UpdateAddressBar">
+<pre>permalink</pre>
+</div>
+<div created="20210316040048786" creator="dpongimo" modified="20210316040048786" modifier="dpongimo" title="$:/config/Navigation/UpdateHistory">
+<pre>yes</pre>
 </div>
 <div created="20210314001912261" modified="20210314001916518" title="$:/config/NewJournal/Title">
 <pre>YYYYYYYY MMM DDth </pre>
@@ -10249,26 +10265,29 @@ Error message and password prompt
 <div created="20210314012457924" modified="20210314012458542" title="$:/state/edit/references--247287909">
 <pre>hide</pre>
 </div>
+<div created="20210316040559167" creator="dpongimo" modified="20210316040602085" modifier="dpongimo" title="$:/state/editpreviewtype">
+<pre>$:/core/ui/EditTemplate/body/preview/output</pre>
+</div>
 <div created="20210314004516876" modified="20210314004517504" title="$:/state/image-picker/system--30539526">
 <pre>hide</pre>
 </div>
 <div created="20210314004018200" modified="20210314004020590" title="$:/state/Link/-87203796/search">
 <pre></pre>
 </div>
-<div created="20210314002548383" modified="20210314005548747" title="$:/state/showeditpreview">
-<pre>no</pre>
+<div created="20210314002548383" creator="dpongimo" modified="20210316040454293" modifier="dpongimo" title="$:/state/showeditpreview">
+<pre>yes</pre>
 </div>
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
-<div created="20210314001932595" modified="20210314010056775" title="$:/state/tab--1963855381">
-<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+<div created="20210314001932595" creator="dpongimo" modified="20210316040107478" modifier="dpongimo" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
 <div created="20210314001923135" modified="20210314012256914" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210314001123268" creator="dpongimo" modified="20210314014345697" modifier="dpongimo" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210314001123268" creator="dpongimo" modified="20210316040111196" modifier="dpongimo" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210314001126171" creator="dpongimo" modified="20210314014454679" modifier="dpongimo" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
@@ -10276,7 +10295,7 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" creator="dpongimo" modified="20210316035948100" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
+<div created="20210314001939532" creator="dpongimo" modified="20210316040850059" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10324,7 +10343,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]]" modified="20210316035955712" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration" modified="20210316040133573" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10439,6 +10458,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210316040057794" creator="dpongimo" modified="20210316040057794" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
+<pre>fluid-fixed</pre>
+</div>
 <div created="20210314005923716" modified="20210314005923716" title="$:/themes/tiddlywiki/vanilla/options/stickytitles">
 <pre>yes</pre>
 </div>
@@ -10464,6 +10486,27 @@ It's currently in the early design phase with a focus on creating full game desi
 <div created="20210314013842829" creator="dpongimo" modified="20210314014555344" modifier="dpongimo" title="dungeons" type="text/vnd.tiddlywiki">
 <pre>Dungeons are sprawling complexes created by humans in service of [[gods]] to be plundered by [[adventurers]]. Adventurers are attracted by dungeons for fame and fortune and are willing to endure incredible hardships to retrieve the loot deep within dungeons. Dungeons typically contain traps and monsters which adventurers defeat to gain experience.
 Devoted worshipers may enter into contracts with gods to become [[dungeon lords]] and manage these dungeons.
+</pre>
+</div>
+<div created="20210316040146387" creator="dpongimo" modified="20210316041919629" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
+<pre>!! [[Dungeon Lord 1.0|https://f95zone.to/threads/dungeon-lord-v1-0-dungeon-gaming.53534/]]
+
+By Dungeon Gaming
+
+Dungeon Lord is a fabulous contemporary erotic dungeon management game that effectively captures the genre at a high level. The game is built using Twine and [[SugarCube|https://www.motoslave.net/sugarcube/]] which gives the game native support for full game state saving at any point. The game is also entirely turn based where each step of the game is fully paused until the player makes a decision or advances the scene.
+
+[[Dungeon Lord 2.0 (WIP)|https://f95zone.to/threads/dungeon-lord-a-new-beginning-v0-1-2-dungeon-gaming.75431/]] builds on this with a revamped user interface and additional upgrade paths.
+
+
+!!! Strengths
+* Robust fetish simulation where NPC sexual preferences affect how different player actions affect them. This is fleshed out further in the sequel where certain combinations of fetishes and status effects can result in unique outcomes.
+* Modular mechanic design which allows for future NPC types, fetishes, status effects, and upgrades to slot into the existing game mechanics
+* Full save state support
+* Mod support for adding new character images and gifs
+
+!!! Weaknesses
+* Randomness is client side so save-scumming can result in different randomness results.
+* Event artwork is limited to image and gifs embedded in text
 </pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
