--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10297,8 +10297,8 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" creator="dpongimo" modified="20210316041929485" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210314001939532" creator="dpongimo" modified="20210316042043717" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -10345,7 +10345,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316035936518" creator="dpongimo" list="[[Dungeon Lord]] [[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration" modified="20210316040133573" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration" modified="20210316040133573" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10510,8 +10510,12 @@ Dungeon Lord is a fabulous contemporary erotic dungeon management game that effe
 Devoted worshipers may enter into contracts with gods to become [[dungeon lords]] and manage these dungeons.
 </pre>
 </div>
-<div created="20210316040146387" creator="dpongimo" modified="20210316042035050" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
-<pre>{{Dungeon Lord}}</pre>
+<div created="20210316040146387" creator="dpongimo" modified="20210316042457758" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
+<pre>* [[Dungeon Lord]]
+* [[Explorer of Yggdrasil]]
+* [[Trap Quest]]
+* [[Erotic Trap Dungeon]]
+</pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
