--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -219,6 +219,8 @@ Error message and password prompt
 
 <li>$:/state/ShowPaletteEditor</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -10293,10 +10295,13 @@ Error message and password prompt
 <div created="20210316043642625" creator="dpongimo" modified="20210316043644162" modifier="dpongimo" title="$:/state/peek-stylesheets/mode/--994748944">
 <pre>restored</pre>
 </div>
-<div created="20210314002548383" creator="dpongimo" modified="20210316040454293" modifier="dpongimo" title="$:/state/showeditpreview">
-<pre>yes</pre>
+<div created="20210314002548383" creator="dpongimo" modified="20210316212035896" modifier="dpongimo" title="$:/state/showeditpreview">
+<pre>no</pre>
 </div>
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
+<pre>no</pre>
+</div>
+<div created="20210316212002426" creator="dpongimo" modified="20210316212023120" modifier="dpongimo" title="$:/state/sidebar">
 <pre>no</pre>
 </div>
 <div created="20210314001932595" creator="dpongimo" modified="20210316043710430" modifier="dpongimo" title="$:/state/tab--1963855381">
@@ -10308,16 +10313,16 @@ Error message and password prompt
 <div created="20210316043637354" creator="dpongimo" modified="20210316043648444" modifier="dpongimo" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20210314001123268" creator="dpongimo" modified="20210316043708610" modifier="dpongimo" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20210314001123268" creator="dpongimo" modified="20210316212016410" modifier="dpongimo" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20210314001126171" creator="dpongimo" modified="20210314014454679" modifier="dpongimo" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
+<div created="20210314001126171" creator="dpongimo" modified="20210316212018665" modifier="dpongimo" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" creator="dpongimo" modified="20210316043905542" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
+<div created="20210314001939532" creator="dpongimo" modified="20210316212022237" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10365,7 +10370,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316043926303" creator="dpongimo" list="[[NSFW Warning]]" modified="20210316043946818" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316211954123" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview [[Trap Quest]]" modified="20210316212012479" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10576,7 +10581,7 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 
 The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].</pre>
 </div>
-<div created="20210316042511538" creator="dpongimo" modified="20210316043456214" modifier="dpongimo" tags="inspiration" title="Trap Quest">
+<div created="20210316042511538" creator="dpongimo" modified="20210316212046097" modifier="dpongimo" tags="inspiration" title="Trap Quest" type="text/vnd.tiddlywiki">
 <pre>!! [[Trap Quest|https://trapquest.com]]
 
 By Aika (and others)
