--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10301,7 +10301,7 @@ Error message and password prompt
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
-<div created="20210316212002426" creator="dpongimo" modified="20210316212023120" modifier="dpongimo" title="$:/state/sidebar">
+<div created="20210316212002426" creator="dpongimo" modified="20210316213330803" modifier="dpongimo" title="$:/state/sidebar">
 <pre>no</pre>
 </div>
 <div created="20210314001932595" creator="dpongimo" modified="20210316043710430" modifier="dpongimo" title="$:/state/tab--1963855381">
@@ -10322,7 +10322,7 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" creator="dpongimo" modified="20210316212022237" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
+<div created="20210314001939532" creator="dpongimo" modified="20210316213327900" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10370,7 +10370,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316211954123" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview [[Trap Quest]]" modified="20210316212012479" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316213245496" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview [[Trap Quest]]" modified="20210316213439376" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10581,14 +10581,30 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 
 The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].</pre>
 </div>
-<div created="20210316042511538" creator="dpongimo" modified="20210316212046097" modifier="dpongimo" tags="inspiration" title="Trap Quest" type="text/vnd.tiddlywiki">
+<div created="20210316042511538" creator="dpongimo" modified="20210316214944933" modifier="dpongimo" tags="inspiration" title="Trap Quest" type="text/vnd.tiddlywiki">
 <pre>!! [[Trap Quest|https://trapquest.com]]
 
 By Aika (and others)
 
 Trap Quest is a long running dungeon crawler where the player is subject to a wide range of traps, transformations, and cursed loot.
 
-The game is built using an interactive story format called [[Glulxe|http://www.davidkinder.co.uk/glulxe.html]] which can be run using Win Git (not the source control). Glulxe inherits directly from many early text adventure tools and games and primarily uses verb text input as the primary control mechanism. Trap Quest includes some basic graphical buttons which automate writing out commands like `inventory` and `drink green potion`, but all game interactions must be routed through text actions. </pre>
+The game is built using an interactive story format called [[Glulxe|http://www.davidkinder.co.uk/glulxe.html]] which can be run using Win Git (not the source control). Glulxe inherits directly from many early text adventure tools and games and primarily uses verb text input as the primary control mechanism. Trap Quest includes some basic graphical buttons which automate writing out commands like `inventory` and `drink green potion`, but all game interactions must be routed through text actions. 
+
+Trap Quest is based around the &quot;unwilling feminization&quot; fetish where most enemies, traps, and items affect the player's feminization through physical and mental transformations. This is further explored through various specific fetish themes such as latex, bimbo transformations/intelligence loss, cum drinking, which are conveyed through lore text, player actions, skills, enemies, and items.
+
+As a transformation focused game, Trap Quest puts a great deal of effort into tracking player stats and displaying a graphical representation of the player's profile. The art for the player is contributed by outside artists and the user must make a decision which art pack to use before playing the game. All art packs are given the same profile information such as hair length, worn items, and makeup.
+
+!!! Strengths
+* Highly extensible design allows easy development of new enemies, traps, items and even interactions
+* Great connection between player actions and the sexual fantasy. Sexual elements and fetishes are not only tracked but affect most elements of the game in a natural way. 
+* High replayability due to rouge-like dungeon design. The dungeon is procedurally generated with a natural difficulty curve and many possible ending results
+
+!!! Weaknesses
+* Intimidating interface hides much of the fantasy behind dialog boxes, manual text entry, and an aging game engine (interpreter)
+* Poor graphical visualization of the fantasy as much of the dungeon is rendered as basic grid squares with any character art restricted to events
+
+!!! Takeaways
+</pre>
 </div>
 
 
