--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10372,7 +10372,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316213245496" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview [[Erotic Trap Dungeon]] [[Trap Quest]]" modified="20210316214957375" modifier="dpongimo" title="$:/StoryList">
+<div created="20210317032854450" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration" modified="20210317032858999" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10569,12 +10569,12 @@ Erotic Trap Dungeon also keeps track of other erotic stats for piss and scat pla
 !!! Weaknesses
 * Heavy reliance on RPG Maker tilesets gives the game environments a generic atmosphere</pre>
 </div>
-<div created="20210316040146387" creator="dpongimo" modified="20210316042457758" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
+<div created="20210316040146387" creator="dpongimo" modified="20210317032913584" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
 <pre>* [[Dungeon Lord]]
 * [[Explorer of Yggdrasil]]
 * [[Trap Quest]]
 * [[Erotic Trap Dungeon]]
-</pre>
+* [[Whorelock's Revenge]]</pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
