--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -309,6 +309,8 @@ Error message and password prompt
 
 <li>Trap Quest</li>
 
+<li>Whorelock's Revenge</li>
+
 </ul>
 </p>
 
@@ -10297,8 +10299,8 @@ Error message and password prompt
 <div created="20210316043642625" creator="dpongimo" modified="20210316043644162" modifier="dpongimo" title="$:/state/peek-stylesheets/mode/--994748944">
 <pre>restored</pre>
 </div>
-<div created="20210314002548383" creator="dpongimo" modified="20210316212035896" modifier="dpongimo" title="$:/state/showeditpreview">
-<pre>no</pre>
+<div created="20210314002548383" creator="dpongimo" modified="20210317033258445" modifier="dpongimo" title="$:/state/showeditpreview">
+<pre>yes</pre>
 </div>
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
@@ -10372,7 +10374,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210317032854450" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration" modified="20210317032858999" modifier="dpongimo" title="$:/StoryList">
+<div created="20210317032854450" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Whorelock's Revenge]]" modified="20210317032923433" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10627,6 +10629,11 @@ As a transformation focused game, Trap Quest puts a great deal of effort into tr
 
 !!! Takeaways
 </pre>
+</div>
+<div created="20210317033152402" creator="dpongimo" modified="20210317033317603" modifier="dpongimo" tags="inspiration" title="Whorelock's Revenge">
+<pre>!! [[Whorelock's Revenge|https://bedlamgames.tumblr.com/post/138890203536/whorelocks-revenge]]
+
+By Bedlam Games</pre>
 </div>
 
 
