--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10317,8 +10317,8 @@ Error message and password prompt
 <div created="20210316043637354" creator="dpongimo" modified="20210316043648444" modifier="dpongimo" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20210314001123268" creator="dpongimo" modified="20210316212016410" modifier="dpongimo" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210314001123268" creator="dpongimo" modified="20210318164649779" modifier="dpongimo" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20210314001126171" creator="dpongimo" modified="20210316212018665" modifier="dpongimo" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -10326,7 +10326,7 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" creator="dpongimo" modified="20210316213327900" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
+<div created="20210314001939532" creator="dpongimo" modified="20210318164659605" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10374,7 +10374,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210317032854450" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Erotic Trap Dungeon]] [[Whorelock's Revenge]]" modified="20210317033327714" modifier="dpongimo" title="$:/StoryList">
+<div created="20210318164603042" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview" modified="20210318164701587" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10601,12 +10601,16 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 
 [[I am an adult|Dreamy Dungeon]]</pre>
 </div>
-<div created="20210314012630418" creator="dpongimo" modified="20210316043907128" modifier="dpongimo" title="Overview">
+<div created="20210314012630418" creator="dpongimo" modified="20210318164816987" modifier="dpongimo" title="Overview">
 <pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon. Dreamy Dungeon is [[inspired|Inspiration]] by many previous games.
 
 {{Inspiration}}
 
-The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].</pre>
+The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].
+
+[[High Level Design]]
+
+[[Mechanic Design]]</pre>
 </div>
 <div created="20210316042511538" creator="dpongimo" modified="20210316214944933" modifier="dpongimo" tags="inspiration" title="Trap Quest" type="text/vnd.tiddlywiki">
 <pre>!! [[Trap Quest|https://trapquest.com]]
